StartUpFlexBison2024/Grammar.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: declarations function_declarations statements
    2                 | declarations statements
    3                 | function_declarations statements
    4                 | statements

    5 declarations: declarations declaration
    6             | declaration

    7 declaration: type_specifier IDENTIFIER ';'

    8 function_declarations: function_declarations function_declaration
    9                      | function_declaration

   10 function_declaration: type_specifier IDENTIFIER '(' parameter_list ')' '{' declarations statements '}'
   11                     | type_specifier IDENTIFIER '(' parameter_list ')' '{' declarations '}'
   12                     | type_specifier IDENTIFIER '(' parameter_list ')' '{' statements '}'
   13                     | type_specifier IDENTIFIER '(' parameter_list ')' '{' '}'

   14 parameter_list: parameter_list ',' parameter
   15               | parameter

   16 parameter: type_specifier IDENTIFIER

   17 type_specifier: INT
   18               | FLOAT
   19               | DOUBLE
   20               | CHAR

   21 statements: statements statement
   22           | statement

   23 statement: expression ';'
   24          | do_while_statement
   25          | while_statement
   26          | if_statement
   27          | for_statement
   28          | return_statement
   29          | break_statement
   30          | continue_statement
   31          | ';'
   32          | compound_statement

   33 compound_statement: '{' statements '}'
   34                   | '{' '}'

   35 while_statement: WHILE '(' expression ')' statement

   36 do_while_statement: DO statement WHILE '(' expression ')' ';'

   37 for_statement: FOR '(' expression ';' expression ';' expression ')' statement
   38              | FOR '(' expression ';' expression ';' ')' statement
   39              | FOR '(' expression ';' ';' expression ')' statement
   40              | FOR '(' expression ';' ';' ')' statement
   41              | FOR '(' ';' expression ';' expression ')' statement
   42              | FOR '(' ';' expression ';' ')' statement
   43              | FOR '(' ';' ';' expression ')' statement
   44              | FOR '(' ';' ';' ')' statement

   45 if_statement: IF '(' expression ')' statement
   46             | IF '(' expression ')' statement ELSE statement

   47 continue_statement: CONTINUE ';'

   48 break_statement: BREAK ';'

   49 return_statement: RETURN expression ';'
   50                 | RETURN ';'

   51 expression: expression '+' expression
   52           | expression '-' expression
   53           | expression '*' expression
   54           | expression '/' expression
   55           | expression '%' expression
   56           | IDENTIFIER '=' expression
   57           | '-' expression
   58           | '+' expression
   59           | expression '^' expression
   60           | '(' expression ')'
   61           | expression '>' expression
   62           | expression '<' expression
   63           | expression EQ expression
   64           | expression NE expression
   65           | expression GE expression
   66           | expression LE expression
   67           | expression AND expression
   68           | expression OR expression
   69           | '!' expression
   70           | IDENTIFIER
   71           | IDENTIFIER '(' argument_list ')'
   72           | NUMBER

   73 argument_list: argument_list ',' expression
   74              | expression


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 69
    '%' (37) 55
    '(' (40) 10 11 12 13 35 36 37 38 39 40 41 42 43 44 45 46 60 71
    ')' (41) 10 11 12 13 35 36 37 38 39 40 41 42 43 44 45 46 60 71
    '*' (42) 53
    '+' (43) 51 58
    ',' (44) 14 73
    '-' (45) 52 57
    '/' (47) 54
    ';' (59) 7 23 31 36 37 38 39 40 41 42 43 44 47 48 49 50
    '<' (60) 62
    '=' (61) 56
    '>' (62) 61
    '^' (94) 59
    '{' (123) 10 11 12 13 33 34
    '}' (125) 10 11 12 13 33 34
    error (256)
    NUMBER <node> (258) 72
    IDENTIFIER <node> (259) 7 10 11 12 13 16 56 70 71
    NE <node> (260) 64
    GE <node> (261) 65
    LE <node> (262) 66
    AND <node> (263) 67
    OR <node> (264) 68
    INT <node> (265) 17
    FLOAT <node> (266) 18
    CHAR <node> (267) 20
    DOUBLE <node> (268) 19
    WHILE <node> (269) 35 36
    DO <node> (270) 36
    FOR <node> (271) 37 38 39 40 41 42 43 44
    IF <node> (272) 45 46
    ELSE <node> (273) 46
    RETURN <node> (274) 49 50
    BREAK <node> (275) 48
    CONTINUE <node> (276) 47
    IFPREC (277)
    EQ (278) 63


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    translation_unit <node> (41)
        on left: 1 2 3 4
        on right: 0
    declarations <node> (42)
        on left: 5 6
        on right: 1 2 5 10 11
    declaration <node> (43)
        on left: 7
        on right: 5 6
    function_declarations <node> (44)
        on left: 8 9
        on right: 1 3 8
    function_declaration <node> (45)
        on left: 10 11 12 13
        on right: 8 9
    parameter_list <node> (46)
        on left: 14 15
        on right: 10 11 12 13 14
    parameter <node> (47)
        on left: 16
        on right: 14 15
    type_specifier <node> (48)
        on left: 17 18 19 20
        on right: 7 10 11 12 13 16
    statements <node> (49)
        on left: 21 22
        on right: 1 2 3 4 10 12 21 33
    statement <node> (50)
        on left: 23 24 25 26 27 28 29 30 31 32
        on right: 21 22 35 36 37 38 39 40 41 42 43 44 45 46
    compound_statement <node> (51)
        on left: 33 34
        on right: 32
    while_statement <node> (52)
        on left: 35
        on right: 25
    do_while_statement <node> (53)
        on left: 36
        on right: 24
    for_statement <node> (54)
        on left: 37 38 39 40 41 42 43 44
        on right: 27
    if_statement <node> (55)
        on left: 45 46
        on right: 26
    continue_statement <node> (56)
        on left: 47
        on right: 30
    break_statement <node> (57)
        on left: 48
        on right: 29
    return_statement <node> (58)
        on left: 49 50
        on right: 28
    expression <node> (59)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 23 35 36 37 38 39 40 41 42 43 45 46 49 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 73 74
    argument_list <node> (60)
        on left: 73 74
        on right: 71 73


State 0

    0 $accept: . translation_unit $end

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    CHAR        shift, and go to state 5
    DOUBLE      shift, and go to state 6
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    translation_unit       go to state 20
    declarations           go to state 21
    declaration            go to state 22
    function_declarations  go to state 23
    function_declaration   go to state 24
    type_specifier         go to state 25
    statements             go to state 26
    statement              go to state 27
    compound_statement     go to state 28
    while_statement        go to state 29
    do_while_statement     go to state 30
    for_statement          go to state 31
    if_statement           go to state 32
    continue_statement     go to state 33
    break_statement        go to state 34
    return_statement       go to state 35
    expression             go to state 36


State 1

   72 expression: NUMBER .

    $default  reduce using rule 72 (expression)


State 2

   56 expression: IDENTIFIER . '=' expression
   70           | IDENTIFIER .
   71           | IDENTIFIER . '(' argument_list ')'

    '='  shift, and go to state 37
    '('  shift, and go to state 38

    $default  reduce using rule 70 (expression)


State 3

   17 type_specifier: INT .

    $default  reduce using rule 17 (type_specifier)


State 4

   18 type_specifier: FLOAT .

    $default  reduce using rule 18 (type_specifier)


State 5

   20 type_specifier: CHAR .

    $default  reduce using rule 20 (type_specifier)


State 6

   19 type_specifier: DOUBLE .

    $default  reduce using rule 19 (type_specifier)


State 7

   35 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 39


State 8

   36 do_while_statement: DO . statement WHILE '(' expression ')' ';'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    statement           go to state 40
    compound_statement  go to state 28
    while_statement     go to state 29
    do_while_statement  go to state 30
    for_statement       go to state 31
    if_statement        go to state 32
    continue_statement  go to state 33
    break_statement     go to state 34
    return_statement    go to state 35
    expression          go to state 36


State 9

   37 for_statement: FOR . '(' expression ';' expression ';' expression ')' statement
   38              | FOR . '(' expression ';' expression ';' ')' statement
   39              | FOR . '(' expression ';' ';' expression ')' statement
   40              | FOR . '(' expression ';' ';' ')' statement
   41              | FOR . '(' ';' expression ';' expression ')' statement
   42              | FOR . '(' ';' expression ';' ')' statement
   43              | FOR . '(' ';' ';' expression ')' statement
   44              | FOR . '(' ';' ';' ')' statement

    '('  shift, and go to state 41


State 10

   45 if_statement: IF . '(' expression ')' statement
   46             | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 42


State 11

   49 return_statement: RETURN . expression ';'
   50                 | RETURN . ';'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 43
    '('         shift, and go to state 18

    expression  go to state 44


State 12

   48 break_statement: BREAK . ';'

    ';'  shift, and go to state 45


State 13

   47 continue_statement: CONTINUE . ';'

    ';'  shift, and go to state 46


State 14

   58 expression: '+' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 47


State 15

   57 expression: '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 48


State 16

   69 expression: '!' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 49


State 17

   31 statement: ';' .

    $default  reduce using rule 31 (statement)


State 18

   60 expression: '(' . expression ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 50


State 19

   33 compound_statement: '{' . statements '}'
   34                   | '{' . '}'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19
    '}'         shift, and go to state 51

    statements          go to state 52
    statement           go to state 27
    compound_statement  go to state 28
    while_statement     go to state 29
    do_while_statement  go to state 30
    for_statement       go to state 31
    if_statement        go to state 32
    continue_statement  go to state 33
    break_statement     go to state 34
    return_statement    go to state 35
    expression          go to state 36


State 20

    0 $accept: translation_unit . $end

    $end  shift, and go to state 53


State 21

    1 translation_unit: declarations . function_declarations statements
    2                 | declarations . statements
    5 declarations: declarations . declaration

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    CHAR        shift, and go to state 5
    DOUBLE      shift, and go to state 6
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    declaration            go to state 54
    function_declarations  go to state 55
    function_declaration   go to state 24
    type_specifier         go to state 25
    statements             go to state 56
    statement              go to state 27
    compound_statement     go to state 28
    while_statement        go to state 29
    do_while_statement     go to state 30
    for_statement          go to state 31
    if_statement           go to state 32
    continue_statement     go to state 33
    break_statement        go to state 34
    return_statement       go to state 35
    expression             go to state 36


State 22

    6 declarations: declaration .

    $default  reduce using rule 6 (declarations)


State 23

    3 translation_unit: function_declarations . statements
    8 function_declarations: function_declarations . function_declaration

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    CHAR        shift, and go to state 5
    DOUBLE      shift, and go to state 6
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    function_declaration  go to state 57
    type_specifier        go to state 58
    statements            go to state 59
    statement             go to state 27
    compound_statement    go to state 28
    while_statement       go to state 29
    do_while_statement    go to state 30
    for_statement         go to state 31
    if_statement          go to state 32
    continue_statement    go to state 33
    break_statement       go to state 34
    return_statement      go to state 35
    expression            go to state 36


State 24

    9 function_declarations: function_declaration .

    $default  reduce using rule 9 (function_declarations)


State 25

    7 declaration: type_specifier . IDENTIFIER ';'
   10 function_declaration: type_specifier . IDENTIFIER '(' parameter_list ')' '{' declarations statements '}'
   11                     | type_specifier . IDENTIFIER '(' parameter_list ')' '{' declarations '}'
   12                     | type_specifier . IDENTIFIER '(' parameter_list ')' '{' statements '}'
   13                     | type_specifier . IDENTIFIER '(' parameter_list ')' '{' '}'

    IDENTIFIER  shift, and go to state 60


State 26

    4 translation_unit: statements .
   21 statements: statements . statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    $default  reduce using rule 4 (translation_unit)

    statement           go to state 61
    compound_statement  go to state 28
    while_statement     go to state 29
    do_while_statement  go to state 30
    for_statement       go to state 31
    if_statement        go to state 32
    continue_statement  go to state 33
    break_statement     go to state 34
    return_statement    go to state 35
    expression          go to state 36


State 27

   22 statements: statement .

    $default  reduce using rule 22 (statements)


State 28

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 29

   25 statement: while_statement .

    $default  reduce using rule 25 (statement)


State 30

   24 statement: do_while_statement .

    $default  reduce using rule 24 (statement)


State 31

   27 statement: for_statement .

    $default  reduce using rule 27 (statement)


State 32

   26 statement: if_statement .

    $default  reduce using rule 26 (statement)


State 33

   30 statement: continue_statement .

    $default  reduce using rule 30 (statement)


State 34

   29 statement: break_statement .

    $default  reduce using rule 29 (statement)


State 35

   28 statement: return_statement .

    $default  reduce using rule 28 (statement)


State 36

   23 statement: expression . ';'
   51 expression: expression . '+' expression
   52           | expression . '-' expression
   53           | expression . '*' expression
   54           | expression . '/' expression
   55           | expression . '%' expression
   59           | expression . '^' expression
   61           | expression . '>' expression
   62           | expression . '<' expression
   63           | expression . EQ expression
   64           | expression . NE expression
   65           | expression . GE expression
   66           | expression . LE expression
   67           | expression . AND expression
   68           | expression . OR expression

    NE   shift, and go to state 62
    GE   shift, and go to state 63
    LE   shift, and go to state 64
    AND  shift, and go to state 65
    OR   shift, and go to state 66
    '>'  shift, and go to state 67
    '<'  shift, and go to state 68
    EQ   shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    '^'  shift, and go to state 75
    ';'  shift, and go to state 76


State 37

   56 expression: IDENTIFIER '=' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 77


State 38

   71 expression: IDENTIFIER '(' . argument_list ')'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression     go to state 78
    argument_list  go to state 79


State 39

   35 while_statement: WHILE '(' . expression ')' statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 80


State 40

   36 do_while_statement: DO statement . WHILE '(' expression ')' ';'

    WHILE  shift, and go to state 81


State 41

   37 for_statement: FOR '(' . expression ';' expression ';' expression ')' statement
   38              | FOR '(' . expression ';' expression ';' ')' statement
   39              | FOR '(' . expression ';' ';' expression ')' statement
   40              | FOR '(' . expression ';' ';' ')' statement
   41              | FOR '(' . ';' expression ';' expression ')' statement
   42              | FOR '(' . ';' expression ';' ')' statement
   43              | FOR '(' . ';' ';' expression ')' statement
   44              | FOR '(' . ';' ';' ')' statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 82
    '('         shift, and go to state 18

    expression  go to state 83


State 42

   45 if_statement: IF '(' . expression ')' statement
   46             | IF '(' . expression ')' statement ELSE statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 84


State 43

   50 return_statement: RETURN ';' .

    $default  reduce using rule 50 (return_statement)


State 44

   49 return_statement: RETURN expression . ';'
   51 expression: expression . '+' expression
   52           | expression . '-' expression
   53           | expression . '*' expression
   54           | expression . '/' expression
   55           | expression . '%' expression
   59           | expression . '^' expression
   61           | expression . '>' expression
   62           | expression . '<' expression
   63           | expression . EQ expression
   64           | expression . NE expression
   65           | expression . GE expression
   66           | expression . LE expression
   67           | expression . AND expression
   68           | expression . OR expression

    NE   shift, and go to state 62
    GE   shift, and go to state 63
    LE   shift, and go to state 64
    AND  shift, and go to state 65
    OR   shift, and go to state 66
    '>'  shift, and go to state 67
    '<'  shift, and go to state 68
    EQ   shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    '^'  shift, and go to state 75
    ';'  shift, and go to state 85


State 45

   48 break_statement: BREAK ';' .

    $default  reduce using rule 48 (break_statement)


State 46

   47 continue_statement: CONTINUE ';' .

    $default  reduce using rule 47 (continue_statement)


State 47

   51 expression: expression . '+' expression
   52           | expression . '-' expression
   53           | expression . '*' expression
   54           | expression . '/' expression
   55           | expression . '%' expression
   58           | '+' expression .
   59           | expression . '^' expression
   61           | expression . '>' expression
   62           | expression . '<' expression
   63           | expression . EQ expression
   64           | expression . NE expression
   65           | expression . GE expression
   66           | expression . LE expression
   67           | expression . AND expression
   68           | expression . OR expression

    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    '^'  shift, and go to state 75

    $default  reduce using rule 58 (expression)


State 48

   51 expression: expression . '+' expression
   52           | expression . '-' expression
   53           | expression . '*' expression
   54           | expression . '/' expression
   55           | expression . '%' expression
   57           | '-' expression .
   59           | expression . '^' expression
   61           | expression . '>' expression
   62           | expression . '<' expression
   63           | expression . EQ expression
   64           | expression . NE expression
   65           | expression . GE expression
   66           | expression . LE expression
   67           | expression . AND expression
   68           | expression . OR expression

    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    '^'  shift, and go to state 75

    $default  reduce using rule 57 (expression)


State 49

   51 expression: expression . '+' expression
   52           | expression . '-' expression
   53           | expression . '*' expression
   54           | expression . '/' expression
   55           | expression . '%' expression
   59           | expression . '^' expression
   61           | expression . '>' expression
   62           | expression . '<' expression
   63           | expression . EQ expression
   64           | expression . NE expression
   65           | expression . GE expression
   66           | expression . LE expression
   67           | expression . AND expression
   68           | expression . OR expression
   69           | '!' expression .

    $default  reduce using rule 69 (expression)


State 50

   51 expression: expression . '+' expression
   52           | expression . '-' expression
   53           | expression . '*' expression
   54           | expression . '/' expression
   55           | expression . '%' expression
   59           | expression . '^' expression
   60           | '(' expression . ')'
   61           | expression . '>' expression
   62           | expression . '<' expression
   63           | expression . EQ expression
   64           | expression . NE expression
   65           | expression . GE expression
   66           | expression . LE expression
   67           | expression . AND expression
   68           | expression . OR expression

    NE   shift, and go to state 62
    GE   shift, and go to state 63
    LE   shift, and go to state 64
    AND  shift, and go to state 65
    OR   shift, and go to state 66
    '>'  shift, and go to state 67
    '<'  shift, and go to state 68
    EQ   shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    '^'  shift, and go to state 75
    ')'  shift, and go to state 86


State 51

   34 compound_statement: '{' '}' .

    $default  reduce using rule 34 (compound_statement)


State 52

   21 statements: statements . statement
   33 compound_statement: '{' statements . '}'

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19
    '}'         shift, and go to state 87

    statement           go to state 61
    compound_statement  go to state 28
    while_statement     go to state 29
    do_while_statement  go to state 30
    for_statement       go to state 31
    if_statement        go to state 32
    continue_statement  go to state 33
    break_statement     go to state 34
    return_statement    go to state 35
    expression          go to state 36


State 53

    0 $accept: translation_unit $end .

    $default  accept


State 54

    5 declarations: declarations declaration .

    $default  reduce using rule 5 (declarations)


State 55

    1 translation_unit: declarations function_declarations . statements
    8 function_declarations: function_declarations . function_declaration

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    CHAR        shift, and go to state 5
    DOUBLE      shift, and go to state 6
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    function_declaration  go to state 57
    type_specifier        go to state 58
    statements            go to state 88
    statement             go to state 27
    compound_statement    go to state 28
    while_statement       go to state 29
    do_while_statement    go to state 30
    for_statement         go to state 31
    if_statement          go to state 32
    continue_statement    go to state 33
    break_statement       go to state 34
    return_statement      go to state 35
    expression            go to state 36


State 56

    2 translation_unit: declarations statements .
   21 statements: statements . statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    $default  reduce using rule 2 (translation_unit)

    statement           go to state 61
    compound_statement  go to state 28
    while_statement     go to state 29
    do_while_statement  go to state 30
    for_statement       go to state 31
    if_statement        go to state 32
    continue_statement  go to state 33
    break_statement     go to state 34
    return_statement    go to state 35
    expression          go to state 36


State 57

    8 function_declarations: function_declarations function_declaration .

    $default  reduce using rule 8 (function_declarations)


State 58

   10 function_declaration: type_specifier . IDENTIFIER '(' parameter_list ')' '{' declarations statements '}'
   11                     | type_specifier . IDENTIFIER '(' parameter_list ')' '{' declarations '}'
   12                     | type_specifier . IDENTIFIER '(' parameter_list ')' '{' statements '}'
   13                     | type_specifier . IDENTIFIER '(' parameter_list ')' '{' '}'

    IDENTIFIER  shift, and go to state 89


State 59

    3 translation_unit: function_declarations statements .
   21 statements: statements . statement

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    FOR         shift, and go to state 9
    IF          shift, and go to state 10
    RETURN      shift, and go to state 11
    BREAK       shift, and go to state 12
    CONTINUE    shift, and go to state 13
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    ';'         shift, and go to state 17
    '('         shift, and go to state 18
    '{'         shift, and go to state 19

    $default  reduce using rule 3 (translation_unit)

    statement           go to state 61
    compound_statement  go to state 28
    while_statement     go to state 29
    do_while_statement  go to state 30
    for_statement       go to state 31
    if_statement        go to state 32
    continue_statement  go to state 33
    break_statement     go to state 34
    return_statement    go to state 35
    expression          go to state 36


State 60

    7 declaration: type_specifier IDENTIFIER . ';'
   10 function_declaration: type_specifier IDENTIFIER . '(' parameter_list ')' '{' declarations statements '}'
   11                     | type_specifier IDENTIFIER . '(' parameter_list ')' '{' declarations '}'
   12                     | type_specifier IDENTIFIER . '(' parameter_list ')' '{' statements '}'
   13                     | type_specifier IDENTIFIER . '(' parameter_list ')' '{' '}'

    ';'  shift, and go to state 90
    '('  shift, and go to state 91


State 61

   21 statements: statements statement .

    $default  reduce using rule 21 (statements)


State 62

   64 expression: expression NE . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 92


State 63

   65 expression: expression GE . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 93


State 64

   66 expression: expression LE . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 94


State 65

   67 expression: expression AND . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 95


State 66

   68 expression: expression OR . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 96


State 67

   61 expression: expression '>' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 97


State 68

   62 expression: expression '<' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 98


State 69

   63 expression: expression EQ . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 99


State 70

   51 expression: expression '+' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 100


State 71

   52 expression: expression '-' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 101


State 72

   53 expression: expression '*' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 102


State 73

   54 expression: expression '/' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 103


State 74

   55 expression: expression '%' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 104


State 75

   59 expression: expression '^' . expression

    NUMBER      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '+'         shift, and go to state 14
    '-'         shift, and go to state 15
    '!'         shift, and go to state 16
    '('         shift, and go to state 18

    expression  go to state 105


State 76

   23 statement: expression ';' .

    $default  reduce using rule 23 (statement)


State 77
